<resources>
    <string name="app_name">orbotmini</string>
    <string name="app_description">Orbot is a free proxy app that empowers other apps to use the internet more securely. Orbot uses Tor to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Tor is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
    <string name="status_starting_up">Orbot is starting&#8230;</string>
    <string name="status_activated">Connected to the Tor network</string>
    <string name="status_disabled">Orbot is deactivated</string>
    <string name="status_shutting_down">TorService is shutting down</string>
    <string name="tor_process_starting">Starting Tor client&#8230;</string>
    <string name="tor_process_complete">complete.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_about">About</string>
    <string name="main_layout_download">Download</string>
    <string name="main_layout_upload">Upload</string>
    <string name="button_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_scan">Scan BridgeQR</string>
    <string name="menu_share_bridge">Share BridgeQR</string>
    <string name="btn_okay">Okay</string>
    <string name="btn_cancel">Cancel</string>
    <string name="wizard_details">Some Orbot Details</string>
    <string name="wizard_details_msg">Orbot is an open-source application that contains Tor, Obfs4Proxy, BadVPN Tun2Socks, LibEvent and Polipo. It provides a local HTTP proxy (8118) and a SOCKS proxy (9050) into the Tor network. Orbot also has the ability, on rooted device, to send all internet traffic through Tor.</string>
    <string name="pref_general_group">General</string>
    <string name="pref_start_boot_title">Start Orbot on Boot</string>
    <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
    <string name="pref_node_configuration">Node Configuration</string>
    <string name="pref_node_configuration_summary">These are advanced settings that can reduce your anonymity</string>
    <string name="pref_entrance_node">Entrance Nodes</string>
    <string name="pref_entrance_node_summary">Fingerprints, nicks, countries and addresses for the first hop</string>
    <string name="pref_entrance_node_dialog">Enter Entrance Nodes</string>
    <string name="pref_allow_background_starts_title">Allow Background Starts</string>
    <string name="pref_allow_background_starts_summary">Let any app tell Orbot to start Tor and related services</string>
    <string name="pref_proxy_title">Outbound Network Proxy (Optional)</string>
    <string name="pref_proxy_type_title">Outbound Proxy Type</string>
    <string name="pref_proxy_type_summary">Protocol to use for proxy server: HTTP, HTTPS, SOCKS4, SOCKS5</string>
    <string name="pref_proxy_type_dialog">Enter Proxy Type</string>
    <string name="pref_proxy_host_title">Outbound Proxy Host</string>
    <string name="pref_proxy_host_summary">Proxy Server hostname</string>
    <string name="pref_proxy_host_dialog">Enter Proxy Host</string>
    <string name="pref_proxy_port_title">Outbound Proxy Port</string>
    <string name="pref_proxy_port_summary">Proxy Server port</string>
    <string name="pref_proxy_port_dialog">Enter Proxy port</string>
    <string name="pref_proxy_username_title">Outbound Proxy Username</string>
    <string name="pref_proxy_username_summary">Proxy Username (Optional)</string>
    <string name="pref_proxy_username_dialog">Enter Proxy Username</string>
    <string name="pref_proxy_password_title">Outbound Proxy Password</string>
    <string name="pref_proxy_password_summary">Proxy Password (Optional)</string>
    <string name="pref_proxy_password_dialog">Enter Proxy Password</string>
    <string name="couldn_t_start_tor_process_">Couldn\'t start Tor process: </string>
    <string name="error">Error</string>
    <string name="your_reachableaddresses_settings_caused_an_exception_">Your ReachableAddresses settings caused an exception!</string>
    <string name="your_relay_settings_caused_an_exception_">Your relay settings caused an exception!</string>
    <string name="exit_nodes">Exit Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_for_the_last_hop">Fingerprints, nicks, countries and addresses for the last hop</string>
    <string name="enter_exit_nodes">Enter Exit Nodes</string>
    <string name="exclude_nodes">Exclude Nodes</string>
    <string name="fingerprints_nicks_countries_and_addresses_to_exclude">Fingerprints, nicks, countries and addresses to exclude</string>
    <string name="enter_exclude_nodes">Enter Exclude Nodes</string>
    <string name="strict_nodes">Strict Nodes</string>
    <string name="use_only_these_specified_nodes">Use *only* these specified nodes</string>
    <string name="bridges">Bridges</string>
    <string name="use_bridges">Use Bridges</string>
    <string name="enable_alternate_entrance_nodes_into_the_tor_network">Enable alternate entrances into the Tor Network</string>
    <string name="ip_address_and_port_of_bridges">IP address and port of bridges</string>
    <string name="enter_bridge_addresses">Enter Bridge Addresses</string>
    <string name="relays">Relays</string>
    <string name="relaying">Relaying</string>
    <string name="enable_your_device_to_be_a_non_exit_relay">Enable your device to be a non-exit relay</string>
    <string name="relay_port">Relay Port</string>
    <string name="listening_port_for_your_tor_relay">Listening port for your Tor relay</string>
    <string name="enter_or_port">Enter OR port</string>
    <string name="relay_nickname">Relay nickname</string>
    <string name="the_nickname_for_your_tor_relay">The nickname for your Tor relay</string>
    <string name="enter_a_custom_relay_nickname">Enter a custom relay nickname</string>
    <string name="reachable_addresses">Reachable Addresses</string>
    <string name="run_as_a_client_behind_a_firewall_with_restrictive_policies">Run as a client behind a firewall with restrictive policies</string>
    <string name="reachable_ports">Reachable ports</string>
    <string name="ports_reachable_behind_a_restrictive_firewall">Ports reachable behind a restrictive firewall</string>
    <string name="enter_ports">Enter ports</string>
    <string name="enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_">Enable debug log to output (must use adb or aLogcat to view)</string>
    <string name="project_home">Project Home(s): </string>
    <string name="project_urls">https://www.torproject.org/docs/android\nhttps://guardianproject.info/apps/orbot/</string>
    <string name="third_party_software">3rd-Party-Software: </string>
    <string name="tor_version">Tor: https://www.torproject.org</string>
    <string name="libevent_version">LibEvent: http://www.monkey.org/~provos/libevent/</string>
    <string name="polipo_version">Polipo: https://github.com/jech/polipo</string>
    <string name="obfsproxy_version">Obfs4proxy: https://github.com/Yawning/obfs4</string>
    <string name="openssl_version">OpenSSL: http://www.openssl.org</string>
    <string name="hidden_service_request">An app wants to open onion server port %1$s to the Tor network. This is safe if you trust the app.</string>
    <string name="found_existing_tor_process">found existing Tor process&#8230;</string>
    <string name="something_bad_happened">Something bad happened. Check the log</string>
    <string name="unable_to_read_hidden_service_name">unable to read onion service name</string>
    <string name="unable_to_start_tor">Unable to start Tor:</string>
    <string name="pref_use_persistent_notifications">Always keep the icon in toolbar when Orbot is connected</string>
    <string name="pref_use_persistent_notifications_title">Always-On Notifications</string>
    <string name="pref_use_expanded_notifications">Show expanded notification with Tor exit country and IP</string>
    <string name="pref_use_expanded_notifications_title">Expanded Notifications</string>
    <string name="set_locale_title">Language</string>
    <string name="no_internet_connection_tor">No internet connection; Tor is on standby…</string>
    <string name="pref_disable_network_title">No Network Auto-Sleep</string>
    <string name="pref_disable_network_summary">Put Tor to sleep when there is no internet available</string>
    <string name="newnym">You\'ve switched to a new Tor identity!</string>
    <string name="pref_open_proxy_on_all_interfaces_title">Open Proxy on All Interfaces</string>
    <string name="pref_open_proxy_on_all_interfaces_summary">Allow Wi-Fi peers, tethered devices and anyone else who can connect to your IP, to access Tor</string>
    <string name="no_network_connectivity_putting_tor_to_sleep_">No network connectivity. Putting Tor to sleep…</string>
    <string name="network_connectivity_is_good_waking_tor_up_">Network connectivity is good. Waking Tor up…</string>
    <string name="updating_settings_in_tor_service">updating settings in Tor service</string>
    <string name="pref_socks_title">Tor SOCKS</string>
    <string name="pref_socks_summary">Port that Tor offers its SOCKS proxy on (default: 9050 or 0 to disable)</string>
    <string name="pref_socks_dialog">SOCKS Port Config</string>
    <string name="pref_http_title">Tor HTTP</string>
    <string name="pref_http_summary">Port that Tor offers its HTTP proxy on (default: 8118 or 0 to disable)</string>
    <string name="pref_http_dialog">HTTP Port Config</string>
    <string name="pref_transport_title">Tor TransProxy Port</string>
    <string name="pref_transport_summary">Port that Tor offers its Transparent Proxy on (default: 9040 or 0 to disable)</string>
    <string name="pref_transport_dialog">TransProxy Port Config</string>
    <string name="menu_qr">QR Codes</string>
    <string name="if_your_mobile_network_actively_blocks_tor_you_can_use_a_tor_bridge_to_access_the_network_another_way_to_get_bridges_is_to_send_an_email_to_bridges_torproject_org_please_note_that_you_must_send_the_email_using_an_address_from_one_of_the_following_email_providers_riseup_gmail_or_yahoo_">If your mobile network actively blocks Tor, you can use a \'Bridge Server\' as an alternate way in. SELECT one of the options to configure and test...</string>
    <string name="menu_hidden_services">Onion Services</string>
    <string name="service_type">Service type</string>
    <string name="client_cookies">Client cookies</string>
    <string name="backup_cookie">Backup cookie</string>
    <string name="delete_cookie">Delete cookie</string>
    <string name="hosted_services">Hosted Services</string>
    <string name="bridge_direct_connect">Connect directly to Tor (Best)</string>
    <string name="bridge_community">Connect through community servers</string>
    <string name="bridge_cloud">Connect through cloud servers</string>
    <string name="bridges_get_new">Request New Bridges... (If all else fails)</string>
    <string name="menu_new_identity">New Identity</string>
    <string name="user_services">User services</string>
    <string name="app_services">App services</string>
    <string name="title_boost_your_privacy">Boost Your Privacy</string>
    <string name="send_your_app_traffic_over_tor">Send app data over Tor</string>
    <string name="turn_off_apps">Turn off app data</string>
    <string name="stop_apps_from_using_the_network">Stop app from using the network (coming soon!)</string>
    <string name="wifi_only">Wifi only</string>
    <string name="keep_your_apps_from_using_mobile_data">Only allow connection over wifi (coming soon!)</string>
</resources>