<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_newnym"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/menu_new_identity"
        yourapp:showAsAction="always" />


    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        yourapp:showAsAction="never" />

    <item
        android:title="@string/menu_qr"
        yourapp:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_scan"
                android:title="@string/menu_scan"
                yourapp:showAsAction="never" />

            <item
                android:id="@+id/menu_share_bridge"
                android:title="@string/menu_share_bridge"
                yourapp:showAsAction="never" />
        </menu>
    </item>

    <item
        android:title="@string/menu_hidden_services"
        yourapp:showAsAction="never">
        <menu>

            <item
                android:id="@+id/menu_v3_onion_services"
                android:title="@string/v3_hosted_services"
                yourapp:showAsAction="never" />

            <item
                android:id="@+id/menu_v3_onion_client_auth"
                android:title="@string/v3_client_auth"
                yourapp:showAsAction="never" />

            <item
                android:title="@string/v2_hidden_services"
                yourapp:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/menu_hidden_services"
                        android:title="@string/hosted_services"
                        yourapp:showAsAction="never" />

                    <item
                        android:id="@+id/menu_client_cookies"
                        android:title="@string/client_cookies"
                        yourapp:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/menu_about"
        yourapp:showAsAction="never" />

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/menu_exit"
        yourapp:showAsAction="never" />

</menu>
