<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:text="@string/backup_cookie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cookie_backup" />

    <Button
        android:text="@string/delete_cookie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cookie_delete" />

    <Button
        android:text="@string/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cookie_cancel" />

</LinearLayout>