<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AppConfigActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_app_config"
    android:padding="20dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_boost_your_privacy"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/privacy_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_your_app_traffic_over_tor"
        android:textSize="16dp"
        android:layout_below="@+id/privacy_title"
        />

        <Switch
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_toRightOf="@+id/privacy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turn_off_apps"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/off_apps_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_apps_from_using_the_network"
            android:textSize="16dp"
            android:layout_below="@+id/off_apps_title"
            />
        <Switch
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_toRightOf="@+id/off_apps_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_only"
            android:textStyle="bold"
            android:textSize="20dp"
            android:id="@+id/wifi_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_your_apps_from_using_mobile_data"
            android:textSize="16dp"
            android:layout_below="@+id/wifi_title"
            />

        <Switch
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_toRightOf="@+id/wifi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </RelativeLayout>



</LinearLayout>